examples/kubernetes/all-in-one/mongo.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: 12-factor-app
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  serviceName: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo:6
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: 12-factor-app
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
